fix(app): allow overflow scrolling on view to be safe
In case the user is on a device with a resolution that
creates cutoff, the user should still be able to scroll
to interact.

--- a/spot-client/src/css/app.scss
+++ b/spot-client/src/css/app.scss
@@ -13,6 +13,5 @@ body {
 body,
 body > div {
     height: 100%;
-    overflow: hidden;
     width: 100%;
 }
