--- a/spot-client/src/css/media-queries.scss
+++ b/spot-client/src/css/media-queries.scss
@@ -1,5 +1,6 @@
 // Breakpoints
-$bp-xsmall: 0em; // everything else
+$bp-xxsmall: 0em; // everything else
+$bp-xsmall: 2em; // 320px
 $bp-small: 48em; // 768px
 $bp-medium: 64em; // 1024px
 $bp-large: 85.375em; // 1366px
