--- a/spot-client/src/css/remote.scss
+++ b/spot-client/src/css/remote.scss
@@ -104,7 +104,7 @@
             
             &:not(:last-child) {
                 @media #{$mq-xsmall} {
-                    margin-right: 3em;
+                    margin-right: 1em;
                 }
             
                 @media #{$mq-small} {
