--- a/spot-client/src/css/views.css
+++ b/spot-client/src/css/views.css
@@ -64,7 +64,6 @@
     flex-direction: column;
     height: 100vh;
     justify-content: center;
-    overflow: hidden;
     width: 100vw;
 }
 
